# auth-kubernetees

./: .gitignore  Cargo.toml  Concept.md  Dockerfile  README.md  presentation.md
.github/workflows/: deploy.yml
front-end/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
front-end/src/: App.tsx  index.css
front-end/src/api/: .gitignore  api.ts  base.ts  client.ts
front-end/src/pages/: Login.tsx  Profile.tsx  Register.tsx
k8s/: backend-configmap.yaml  backend-deployment.yaml  backend-secret.yaml  frontend-configmap.yaml  frontend-deployment.yaml  frontend-service.yaml
src/: main.rs  utils.rs
src/middleware/: auth.rs
src/models/: user.rs
src/routes/: auth.rs  protected.rs
