[package]
name = "auth_api"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.17.0"
chrono = "0.4.41"
jsonwebtoken = "9.3.1"
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
serde_json = "1.0.140"
dotenvy = "0.15.0"
base64 = "0.22.1"
